# riptide_fw_bridge

./: CMakeLists.txt  firmware_msgs.yaml  package.xml
include/riptide_fw_bridge/: RosProtobufBridge.hpp
scripts/: protobridge_gen.py
src/: RosProtobufBridge.cpp  get_version.cpp  main.cpp
